# BEClient

./: CMakeLists.txt  README.md  main.cpp
include/: Client.h  Fabric.h  IMessage.h  MessageStr.h  Receiver.h  SocketConnection.h
src/: Client.cpp  Receiver.cpp  Recevier.cpp  Sender.cpp  SocketConnection.cpp
